# fast-restapi

./: 1.txt  LICENSE  README.md  pyproject.toml
example/: create_database.py  database.py  models.py  restapi.py  router.py  schemas.py  test.py
fast_restapi/: __init__.py  enums.py  exceptions.py  function_fabrics.py  repository.py  restapi.py
